src/components/background.css
.background {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: -1;
  max-width: 1080px;
  margin: 0 auto;
  float: none;
  max-height: 1200px;
}

.background .rocket-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 180px;
  height: 245px;
  position: absolute;
  right: 25%;
  bottom: 128px;
  -webkit-transform: translateX(50%);
  -moz-transform: translateX(50%);
  transform: translateX(50%);
}

.background .earth-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 100px;
  position: absolute;
  right: 25%;
  bottom: 64px;
}

